# save_reddit_post

./: .gitignore  Cargo.toml  LICENSE.MD  README.MD
.github/: tests_windows.yml
.github/workflows/: build.yml  build_and_test.yml  build_linux.yml  build_windows.yml  building.yml  tests.yml  tests_linux.yml
src/: cli.rs  element.rs  element_test_data1.json  element_test_output1.txt  html_file.html  main.rs  output_writer.rs  tests.rs  utils.rs
