[package]
name = "srp" #save_reddit_post
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false

[dependencies]
reqwest="0.11.14"
tokio = { version="1.24.2", features = ["macros","net","rt-multi-thread"]} #Finished dev [unoptimized + debuginfo] target(s) in 44.17s
#tokio = { version="1.24.2", features = ["full"]} #Finished dev [unoptimized + debuginfo] target(s) in 59.50s
json = "0.12.4"