[package]
name = "srp" #save_reddit_post
version = "0.3.10"
edition = "2021"
repository = "https://github.com/bejker123/save_reddit_post"
license-file = "LICENSE.MD"
categories=["util"]
keywords = ["util","reddit"]
description = "Save reddit posts easily"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false

[dependencies]
reqwest="0.11.15"
tokio = { version="1.26.0", features = ["macros","net","rt-multi-thread"]} #Finished dev [unoptimized + debuginfo] target(s) in 44.17s
#tokio = { version="1.24.2", features = ["full"]} #Finished dev [unoptimized + debuginfo] target(s) in 59.50s
json = "0.12.4"
async-recursion = "1.0.4"
rand = "0.8.5"
console = "0.15.5"
chrono = "0.4.24"
